contrast issues

--- a/css/partials/_home.scss
+++ b/css/partials/_home.scss
@@ -262,7 +262,7 @@ body#libraries-homepage {
 			}
 		}
 		.hours {
-			color: #7b7b7b;
+			color: #555;
 			display: inline-block;
 			font-size: 0.875em;
 			font-weight: normal;
