--- a/css/partials/_typography.scss
+++ b/css/partials/_typography.scss
@@ -51,7 +51,7 @@ a {
 }
 
 .caption {
-	color: hsla(0, 0.0000%, 48.2353%, 1.0000);
+	color: #555;
 	font-size: 0.875em;
 	font-weight: 300;
 	@include bp-tablet--portrait {
